--- a/master peace ajloun/book.html
+++ b/master peace ajloun/book.html
@@ -53,7 +53,7 @@
             background-color: var(--card-color);
             border-radius: var(--border-radius);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-
+            height: min-content;
         }
 
         .payment-header {
