--- a/master peace ajloun/service-details.html
+++ b/master peace ajloun/service-details.html
@@ -634,9 +634,7 @@
         </div>
     </div>
 
-    <script>
-
-    </script>
+    
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="styles/bootstrap4/popper.js"></script>
@@ -667,6 +665,7 @@
     <script src="js/telefrik_custom.js"></script>
     <script src="js/profile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/Services.js"></script>
 
     <script>
 
