--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -176,280 +176,25 @@
 				<div class="col-lg-1 temp_col"></div>
 				<div class="col-lg-11">
 					<!-- Offers Sorting -->
-					<div class="offers_sorting_container">
-						<ul class="offers_sorting">
-							<li>
-								<span class="sorting_text">price</span>
-								<i class="fa fa-chevron-down"></i>
-								<ul>
-									<li class="sort_btn"
-										data-isotope-option="{ &quot;sortBy&quot;: &quot;original-order&quot; }"
-										data-parent=".price_sorting"><span>show all</span></li>
-									<li class="sort_btn" data-isotope-option="{ &quot;sortBy&quot;: &quot;price&quot; }"
-										data-parent=".price_sorting"><span>ascending</span></li>
-								</ul>
-							</li>
-							<li>
-								<span class="sorting_text">location</span>
-								<i class="fa fa-chevron-down"></i>
-								<ul>
-									<li class="sort_btn"
-										data-isotope-option="{ &quot;sortBy&quot;: &quot;original-order&quot; }">
-										<span>default</span>
-									</li>
-									<li class="sort_btn" data-isotope-option="{ &quot;sortBy&quot;: &quot;name&quot; }">
-										<span>alphabetical</span>
-									</li>
-								</ul>
-							</li>
-							<li>
-								<span class="sorting_text">stars</span>
-								<i class="fa fa-chevron-down"></i>
-								<ul>
-									<li class="filter_btn" data-filter="*"><span>show all</span></li>
-									<li class="sort_btn"
-										data-isotope-option="{ &quot;sortBy&quot;: &quot;stars&quot; }">
-										<span>ascending</span>
-									</li>
-									<li class="filter_btn" data-filter=".rating_3"><span>3</span></li>
-									<li class="filter_btn" data-filter=".rating_4"><span>4</span></li>
-									<li class="filter_btn" data-filter=".rating_5"><span>5</span></li>
-								</ul>
-							</li>
-							<li class="distance_item">
-								<span class="sorting_text">distance from center</span>
-								<i class="fa fa-chevron-down"></i>
-								<ul>
-									<li class="num_sorting_btn"><span>distance</span></li>
-									<li class="num_sorting_btn"><span>distance</span></li>
-									<li class="num_sorting_btn"><span>distance</span></li>
-								</ul>
-							</li>
-							<li>
-								<span class="sorting_text">reviews</span>
-								<i class="fa fa-chevron-down"></i>
-								<ul>
-									<li class="num_sorting_btn"><span>review</span></li>
-									<li class="num_sorting_btn"><span>review</span></li>
-									<li class="num_sorting_btn"><span>review</span></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
 				</div>
 				<div class="col-lg-12">
 					<!-- Offers Grid -->
-					<div class="offers_grid" style="position: relative; height: 1523.5px;" id="offersContainer">
-						<!-- Offers Item -->
-						<div class="offers_item rating_3" style="position: absolute; left: 0px; top: 313px;">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@thoughtcatalog -->
-										<div class="offers_image_background"
-											style="background-image:url(images/offer_5.jpg)">
-										</div>
-										<div class="offer_name"><a href="single_listing.html">eurostar hotel</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">$50<span>per night</span></div>
-										<div class="rating_r rating_r_3 offers_rating" data-rating="3">
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor
-											sit
-											amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum
-											dolor sit
-											amet.</p>
-										<div class="offers_icons">
-											<ul class="offers_icons_list">
-												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/sailboat.png" alt="">
-												</li>
-											</ul>
-										</div>
-										<div class="button book_button"><a
-												href="#">book<span></span><span></span><span></span></a></div>
-										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Offers Item -->
-
-						<div class="offers_item rating_5" style="position: absolute; left: 0px; top: 627px;">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@mindaugas -->
-										<div class="offers_image_background"
-											style="background-image:url(images/offer_6.jpg)">
-										</div>
-										<div class="offer_name"><a href="single_listing.html">grand castle</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">$110<span>per night</span></div>
-										<div class="rating_r rating_r_5 offers_rating" data-rating="5">
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor
-											sit
-											amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum
-											dolor sit
-											amet.</p>
-										<div class="offers_icons">
-											<ul class="offers_icons_list">
-												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/sailboat.png" alt="">
-												</li>
-											</ul>
-										</div>
-										<div class="button book_button"><a
-												href="#">book<span></span><span></span><span></span></a></div>
-										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Offers Item -->
-
-						<div class="offers_item rating_4" style="position: absolute; left: 0px; top: 941px;">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@rktkn -->
-										<div class="offers_image_background"
-											style="background-image:url(images/offer_7.jpg)">
-										</div>
-										<div class="offer_name"><a href="single_listing.html">eurostar hotel</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">$50<span>per night</span></div>
-										<div class="rating_r rating_r_4 offers_rating" data-rating="4">
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor
-											sit
-											amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum
-											dolor sit
-											amet.</p>
-										<div class="offers_icons">
-											<ul class="offers_icons_list">
-												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/sailboat.png" alt="">
-												</li>
-											</ul>
-										</div>
-										<div class="button book_button"><a
-												href="#">book<span></span><span></span><span></span></a></div>
-										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Offers Item -->
-
-						<div class="offers_item rating_3" style="position: absolute; left: 0px; top: 1255px;">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@itsnwa -->
-										<div class="offers_image_background"
-											style="background-image:url(images/offer_8.jpg)">
-										</div>
-										<div class="offer_name"><a href="single_listing.html">grand castle</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">$90<span>per night</span></div>
-										<div class="rating_r rating_r_3 offers_rating" data-rating="3">
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor
-											sit
-											amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum
-											dolor sit
-											amet.</p>
-										<div class="offers_icons">
-											<ul class="offers_icons_list">
-												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/sailboat.png" alt="">
-												</li>
-											</ul>
-										</div>
-										<div class="button book_button"><a
-												href="#">book<span></span><span></span><span></span></a></div>
-										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+					<div class="offers_grid" id="offersContainer">
+						<!-- Dynamic Offers will be injected here -->
 					</div>
 				</div>
 			</div>
 		</div>
+		<br>
+		<br><br><br>
+		<br>
+		<br>
+		<br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br>
+		<br>
+		<br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
