update user role work now

--- a/master peace ajloun/adminDashboard/table.html
+++ b/master peace ajloun/adminDashboard/table.html
@@ -275,7 +275,7 @@
                     <div class="col-sm-12 col-xl-4">
                         <div class="bg-secondary rounded h-100 p-4">
                             <h6 class="mb-4">Update User Role</h6>
-                            <input type="text" id="usernameSearch" placeholder="Enter username or email to search" class="form-control mb-3" value="ddd"/>
+                            <input type="text" id="usernameSearch2" placeholder="Enter username or email to search" class="form-control mb-3" value="ddd"/>
                             <button id="searchUserButton" class="btn btn-primary mb-3">Search User</button>
                     
                             <div id="userDetails" class="mt-3" style="display: none;">
@@ -424,6 +424,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+   
 </body>
 
 </html>
