--- a/master peace ajloun/services.html
+++ b/master peace ajloun/services.html
@@ -114,7 +114,7 @@
                                         <a href="about.html"> about us </a>
                                     </li>
                                     <li class="main_nav_item">
-                                        <a href="offers.html">offers</a>
+                                        <a href="join_us.html">Join Us</a>
                                     </li>
                                     <!-- <li class="main_nav_item"><a href="blog.html">news</a></li> -->
                                 </ul>
@@ -227,7 +227,7 @@
 
         <!-- //////////////////////////////// -->
 
-        <div class="titlepages">
+        <!-- <div class="titlepages">
             <strong>
                 <a href="join_us.html" style="color: white"> Join Us? </a>
             </strong>
@@ -238,7 +238,7 @@
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
-        </div>
+        </div> -->
         <!-- ///////////// -->
         <!-- Footer -->
         <footer class="footer">
