check some styling edits

--- a/master peace ajloun/about.html
+++ b/master peace ajloun/about.html
@@ -225,7 +225,7 @@
 
     <!-- Add -->
 
-    <div class="add">
+    <!-- <div class="add">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -243,7 +243,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Milestones -->
     <div class="milestones">
@@ -253,7 +253,6 @@
         </div>
       </div>
     </div>
-
     <!-- Footer -->
     <footer class="footer">
 
