--- a/master peace ajloun/edit_profile.html
+++ b/master peace ajloun/edit_profile.html
@@ -73,6 +73,17 @@
     vertical-align: middle; /* Centered text */
 }
 
+
+.table-custom th, .table-custom td {
+    vertical-align: middle;
+    text-align: center; /* Center align the content */
+}
+
+.table-custom img {
+    border-radius: 8px; /* Optional: Add rounded corners to images */
+}
+
+
    </style>
 </head>
 
@@ -373,27 +384,35 @@
                         </div>
                     </form>
                         <!-- Booking Table -->
-                        <div class="col-12 bg-white px-3 pb-2">
+                        <div class="col-12 bg-white px-3 pb-2 shadow-sm rounded">
                             <h6 class="d-flex align-items-center mb-3 fw-bold py-3">
-                                <i class="fas fa-calendar-check text-info me-2"></i> Your Bookings
+                                <i class="fas fa-calendar text-info me-2"></i> Your Bookings
                             </h6>
-                            <table class="table table-bordered table-custom">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Tour Name</th>
-                                        <th scope="col">Tour Image</th>
-                                        <th scope="col">Booking Date</th>
-                                        <th scope="col">Guest Number</th>
-                                        <th scope="col">Total Amount</th>
-                                        <th scope="col">Status</th>
-                                        <th scope="col">Payment</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="booking-table-body">
-                                    <!-- Rows will be inserted here dynamically -->
-                                </tbody>
-                            </table>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover table-bordered">
+                                    <thead class="table-light">
+                                        <tr>
+                                            <th scope="col">Tour Name</th>
+                                            <th scope="col">Tour Image</th>
+                                            <th scope="col">Booking Date</th>
+                                            <th scope="col">Guest Number</th>
+                                            <th scope="col">Total Amount</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">Payment</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="booking-table-body">
+                                        <!-- Rows will be inserted here dynamically -->
+                                        <tr>
+                                            
+                                           
+                                        </tr>
+                                        <!-- Add more rows as needed -->
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -633,7 +652,6 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="assets/js/isotope.min.js"></script>
     <script src="assets/js/owl-carousel.js"></script>
     <script src="assets/js/tabs.js"></script>
 
