--- a/master peace ajloun/login.html
+++ b/master peace ajloun/login.html
@@ -24,10 +24,7 @@
             background-color: #f6f5f7;
         }
 
-        .titlepages {
-            width: 20%;
-        }
-
+       
         .custom-alert {
             position: fixed;
             top: 20px;
@@ -274,7 +271,7 @@
             <div class="logincontainer" id="logincontainer">
                 <div class="form-container sign-up-container" id="sign-up-container">
                     <form id="sign-up-form">
-                        <h1>Create Account</h1>
+                        <h1>Sign Up</h1>
                         <span>or use your email for registration</span>
                         <input type="text" placeholder="Name" name="name" required />
                         <input type="email" placeholder="Email" name="email" required />
@@ -286,12 +283,13 @@
                 <div class="form-container sign-in-container">
                     <form id="loginForm">
                         <h1>Sign in</h1>
-                        <div class="social-container">
+                        <!-- <div class="social-container">
                             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                             <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
                             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                         </div>
-                        <span>or use your account</span>
+                        <span>or use your account</span> -->
+                        <br><br>
                         <input placeholder="User Name" type="text" required="" name="UserName" id="loginUsername">
                         <input type="password" placeholder="Password" required="" name="Password2" id="loginPassword" />
                         <a href="#">Forgot your password?</a>
@@ -307,7 +305,7 @@
                             <button class="ghost" id="signIn">Sign In</button>
                         </div>
                         <div class="overlay-panel overlay-right">
-                            <h1>Hello! Welcome!</h1>
+                            <h1>Welcome!</h1>
                             <p class="pharagraph">Enter your details to start up your dashboard!</p>
                             <button class="ghost" id="signUp">Sign Up</button>
                         </div>
