fixing booking table

--- a/master peace ajloun/edit_profile.html
+++ b/master peace ajloun/edit_profile.html
@@ -336,13 +336,13 @@
                                     <td>City Tour</td>
                                     <td>$200.00</td>
                                     <td>2024-10-01</td>
-                                    <td class="text-success font-weight-bold">COMPLETED</td>
+                                    <td class="text-success font-weight-bold"></td>
                                 </tr>
                                 <tr>
                                     <td>Mountain Adventure</td>
                                     <td>$150.00</td>
                                     <td>2024-10-02</td>
-                                    <td class="text-warning font-weight-bold">PENDING</td>
+                                    <td class="text-warning font-weight-bold"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -652,7 +652,7 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="assets/js/owl-carousel.js"></script>
+        <script src="assets/js/owl-carousel.js"></script>
     <script src="assets/js/tabs.js"></script>
 
     <script src="assets/js/popup.js"></script>
