--- a/master peace ajloun/service-details.html
+++ b/master peace ajloun/service-details.html
@@ -231,7 +231,7 @@ h2 {
                                     <li class="main_nav_item">
                                         <a href="about.html">about us</a>
                                     </li>
-                                    <li class="main_nav_item"><a href="offers.html">offers</a></li>
+                                    <li class="main_nav_item"><a href="join_us.html">join us</a></li>
                                 </ul>
                             </div>
                             <div class="content_search ml-lg-0 ml-auto">
