some styling updates

--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -639,7 +639,7 @@
 
 
     <div class="titlepages">
-      <strong>INTRO</strong>
+      <strong>Explore Tours</strong>
       <div id="container-stars">
         <div id="stars"></div>
       </div>
