--- a/master peace ajloun/service-details.html
+++ b/master peace ajloun/service-details.html
@@ -325,7 +325,7 @@ h2 {
             </div>
             <div class="content">
                 <div class="price-container">
-                    <span class="price-label">Price:</span>
+                    <span class="price-label"></span>
                     <p class="price" id="price"> </p>
                 </div>
 
