--- a/master peace ajloun/book.html
+++ b/master peace ajloun/book.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"> -->
-     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+
     <script src="js/bookApi.js"></script>
     <style>
       body {
@@ -300,10 +301,9 @@
                                     </div>
                                 </div>
                                 <p class="footer_about_text">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc
-                                    et suscipit urna. Integer eleme ntum orci eu vehicula
-                                    pretium.
+                                    Discover the beauty of Ajloun, Jordan. From historic sites to scenic landscapes, explore what makes Ajloun a unique
+                                    destination. Contact us for more information or plan your visit today!
+
                                 </p>
                                 <ul class="footer_social_list">
                                     <li class="footer_social_item">
@@ -379,14 +379,33 @@
                             <div class="footer_title">tags</div>
                             <div class="footer_content footer_tags">
                                 <ul class="tags_list clearfix">
-                                    <li class="tag_item"><a href="telefrik.html">Telefrik</a></li>
-                                    <li class="tag_item"><a href="castle.html">Castle</a></li>
-                                    <li class="tag_item"><a href="cabins.html">cabins</a></li>
-                                    <li class="tag_item"><a href="forest_reserve.html">Forest Reserve</a></li>
-                                    <li class="tag_item"><a href="zipline.html">Hiking Zipline</a></li>
-                                    <li class="tag_item"><a href="rajeb_waterfalls.html">Rajib</a></li>
-                                    <li class="tag_item"><a href="natural_trails.html">trails</a></li>
-                                    <li class="tag_item"><a href="mar_elias.html">Mar Elias</a></li>
+                                    <li class="tag_item">
+                                        <a href="">Telefrik</a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href="">Castle</a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href="">cabins</a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href="">
+                                            Forest Reserve </a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href=""> Hiking
+                                            Zipline </a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href="">Rajib</a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href="">trails</a>
+                                    </li>
+                                    <li class="tag_item">
+                                        <a href=""> Mar Elias
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -405,7 +424,8 @@
                                             </div>
                                         </div>
                                         <div class="contact_info_text">
-                                            4127 Raoul Wallenber 45b-c Gibraltar
+                                            1234 Al-Jabal Street, Block 12A, Ajloun, Jordan
+
                                         </div>
                                     </li>
                                     <li class="contact_info_item d-flex f lex-row">
@@ -414,7 +434,7 @@
                                                 <img src="images/phone-call.svg" alt="" />
                                             </div>
                                         </div>
-                                        <div class="contact_info_text">2556-808-8613</div>
+                                        <div class="contact_info_text">0782-347-393</div>
                                     </li>
                                     <li class="contact_info_item d-flex flex-row">
                                         <div>
@@ -424,7 +444,7 @@
                                         </div>
                                         <div class="contact_info_text">
                                             <a href="mailto:contactme@gmail.com?Subject=Hello"
-                                                target="_top">contactme@gmail.com</a>
+                                                target="_top">Onizata3@gmail.com</a>
                                         </div>
                                     </li>
                                     <li class="contact_info_item d-flex flex-row">
@@ -490,6 +510,7 @@
             <script
                 src="https://www.paypal.com/sdk/js?client-id=AcgdFbOoo7IcBvf1cniK4LbHPhZbOTwuaxe-hL55tKttEggJlKqQJSbTQmqoU9QXmmRWyW-VExN3DHBA&enable-funding=venmo&currency=USD"
                 data-sdk-integration-source="button-factory"></script>
+<script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -510,55 +531,58 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
+    // Check if JWT is in local storage
+    document.addEventListener("DOMContentLoaded", function () {
+        // Check if the element with ID 'userBox' exists
+        const userBox = document.getElementById('userBox');
 
-        // Check if JWT is in local storage
-        document.addEventListener("DOMContentLoaded", function () {
-            // Check if the element with ID 'userBox' exists
-            const userBox = document.getElementById('userBox');
+        if (userBox) {
+            // Check if JWT is in local storage
+            const token = localStorage.getItem('jwt');
 
-            if (userBox) {
-                // Check if JWT is in local storage
-                const token = localStorage.getItem('jwt');
+            if (token) {
+                // If user is logged in (JWT token found), show profile link
+                userBox.innerHTML = `
+                            <a href="edit_profile.html" id ="profile_icon">Profile</a>         
+                            <small style="color: whitesmoke;">|</small>
+                            <div class="user_box_link">
+                                <a href="#" id="logoutButton">Logout</a>
+                            </div>
+                        `;
 
-                if (token) {
-                    // If user is logged in (JWT token found), show profile link
-                    userBox.innerHTML = `
-            <a href="edit_profile.html" id ="profile_icon">Profile</a>         <small style="color: whitesmoke;">|</small>
-
-
-
-            <div class="user_box_link">
-            <a href="#" id="logoutButton">Logout</a>
-            </div>
-            `;
-
-                    // Attach logout functionality to the "Logout" button
-                    document.getElementById('logoutButton').addEventListener('click', function (event) {
-                        event.preventDefault(); // Prevent default link behavior
-                        logout();
-                    });
-                } else {
-                    // If user is not logged in, show login/register links
-                    userBox.innerHTML = `
-                <div class="user_box_login user_box_link">
-                    <a href="login.html">Login</a>
-                </div>
-                <div class="user_box_register user_box_link">
-                    <a href="login.html">Register</a>
-                </div>
-            `;
-                }
+                // Attach logout functionality to the "Logout" button
+                document.getElementById('logoutButton').addEventListener('click', function (event) {
+                    event.preventDefault(); // Prevent default link behavior
+                    logout();
+                });
             } else {
-                console.error("Element with ID 'userBox' not found.");
+                // If user is not logged in, show login/register links
+                userBox.innerHTML = `
+                            <div class="user_box_login user_box_link">
+                                <a href="login.html">Login</a>
+                            </div>
+                            <div class="user_box_register user_box_link">
+                                <a href="login.html">Register</a>
+                            </div>
+                        `;
             }
-        });
-
-        // Function to handle logout, moved outside of the event listener
-        function logout() {
-            localStorage.removeItem('jwt'); // Remove JWT from local storage
-            alert("Logged out successfully!");
-            window.location.reload(); // Reload the page to refresh the navbar
+        } else {
+            console.error("Element with ID 'userBox' not found.");
         }
+    });
+
+    // Function to handle logout, moved outside of the event listener
+    function logout() {
+        localStorage.removeItem('jwt'); // Remove JWT from local storage
+
+        // استخدام AlertifyJS لإظهار رسالة نجاح عند تسجيل الخروج
+        alertify.success("Logged out successfully!");
+
+        // إعادة تحميل الصفحة لتحديث الشريط العلوي
+        setTimeout(() => {
+            window.location.reload();
+        }, 1000); // تأخير قليل قبل إعادة التحميل حتى يمكن رؤية الرسالة
+    }
 
     </script>
 </body>
