--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
 		integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+
 	<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<script src="js/OffersApi.js"></script>
 	<style>
@@ -230,10 +232,8 @@
 									</div>
 								</div>
 								<p class="footer_about_text">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-									Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc
-									et suscipit urna. Integer eleme ntum orci eu vehicula
-									pretium.
+									Discover the beauty of Ajloun, Jordan. From historic sites to scenic landscapes, explore what makes Ajloun a unique
+									destination. Contact us for more information or plan your visit today!
 								</p>
 								<ul class="footer_social_list">
 									<li class="footer_social_item">
@@ -309,15 +309,33 @@
 							<div class="footer_title">tags</div>
 							<div class="footer_content footer_tags">
 								<ul class="tags_list clearfix">
-									<li class="tag_item"><a href="telefrik.html">Telefrik</a></li>
-									<li class="tag_item"><a href="castle.html">Castle</a></li>
-									<li class="tag_item"><a href="cabins.html">cabins</a></li>
-									<li class="tag_item"><a href="forest_reserve.html">Forest
-											Reserve</a></li>
-									<li class="tag_item"><a href="zipline.html">Hiking Zipline</a></li>
-									<li class="tag_item"><a href="rajeb_waterfalls.html">Rajib</a></li>
-									<li class="tag_item"><a href="natural_trails.html">trails</a></li>
-									<li class="tag_item"><a href="mar_elias.html">Mar Elias</a></li>
+									<li class="tag_item">
+										<a href="">Telefrik</a>
+									</li>
+									<li class="tag_item">
+										<a href="">Castle</a>
+									</li>
+									<li class="tag_item">
+										<a href="">cabins</a>
+									</li>
+									<li class="tag_item">
+										<a href="">
+											Forest Reserve </a>
+									</li>
+									<li class="tag_item">
+										<a href=""> Hiking
+											Zipline </a>
+									</li>
+									<li class="tag_item">
+										<a href="">Rajib</a>
+									</li>
+									<li class="tag_item">
+										<a href="">trails</a>
+									</li>
+									<li class="tag_item">
+										<a href=""> Mar Elias
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -418,7 +436,8 @@
 			</div>
 		</div>
 
-		<script src="js/jquery-3.2.1.min.js"></script>
+		<script src="js/jqu<script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+ery-3.2.1.min.js"></script>
 		<script src="styles/bootstrap4/popper.js"></script>
 		<script src="styles/bootstrap4/bootstrap.min.js"></script>
 		<script src="plugins/Isotope/isotope.pkgd.min.js"></script>
@@ -428,53 +447,59 @@
 		<script>
 
 			// Check if JWT is in local storage
-			document.addEventListener("DOMContentLoaded", function () {
-				// Check if the element with ID 'userBox' exists
-				const userBox = document.getElementById('userBox');
+			 // Check if JWT is in local storage
+				document.addEventListener("DOMContentLoaded", function () {
+					// Check if the element with ID 'userBox' exists
+					const userBox = document.getElementById('userBox');
 
-				if (userBox) {
-					// Check if JWT is in local storage
-					const token = localStorage.getItem('jwt');
+					if (userBox) {
+						// Check if JWT is in local storage
+						const token = localStorage.getItem('jwt');
 
-					if (token) {
-						// If user is logged in (JWT token found), show profile link
-						userBox.innerHTML = `
-            <a href="edit_profile.html" id ="profile_icon">Profile</a>         <small style="color: whitesmoke;">|</small>
+						if (token) {
+							// If user is logged in (JWT token found), show profile link
+							userBox.innerHTML = `
+                            <a href="edit_profile.html" id ="profile_icon">Profile</a>         
+                            <small style="color: whitesmoke;">|</small>
+                            <div class="user_box_link">
+                                <a href="#" id="logoutButton">Logout</a>
+                            </div>
+                        `;
 
-
-
-            <div class="user_box_link">
-            <a href="#" id="logoutButton">Logout</a>
-            </div>
-            `;
-
-						// Attach logout functionality to the "Logout" button
-						document.getElementById('logoutButton').addEventListener('click', function (event) {
-							event.preventDefault(); // Prevent default link behavior
-							logout();
-						});
+							// Attach logout functionality to the "Logout" button
+							document.getElementById('logoutButton').addEventListener('click', function (event) {
+								event.preventDefault(); // Prevent default link behavior
+								logout();
+							});
+						} else {
+							// If user is not logged in, show login/register links
+							userBox.innerHTML = `
+                            <div class="user_box_login user_box_link">
+                                <a href="login.html">Login</a>
+                            </div>
+                            <div class="user_box_register user_box_link">
+                                <a href="login.html">Register</a>
+                            </div>
+                        `;
+						}
 					} else {
-						// If user is not logged in, show login/register links
-						userBox.innerHTML = `
-                <div class="user_box_login user_box_link">
-                    <a href="login.html">Login</a>
-                </div>
-                <div class="user_box_register user_box_link">
-                    <a href="login.html">Register</a>
-                </div>
-            `;
+						console.error("Element with ID 'userBox' not found.");
 					}
-				} else {
-					console.error("Element with ID 'userBox' not found.");
-				}
-			});
+				});
 
-			// Function to handle logout, moved outside of the event listener
-			function logout() {
-				localStorage.removeItem('jwt'); // Remove JWT from local storage
-				alert("Logged out successfully!");
-				window.location.reload(); // Reload the page to refresh the navbar
-			}
+				// Function to handle logout, moved outside of the event listener
+				function logout() {
+					localStorage.removeItem('jwt'); // Remove JWT from local storage
+
+					// استخدام AlertifyJS لإظهار رسالة نجاح عند تسجيل الخروج
+					alertify.success("Logged out successfully!");
+
+					// إعادة تحميل الصفحة لتحديث الشريط العلوي
+					setTimeout(() => {
+						window.location.reload();
+					}, 1000); // تأخير قليل قبل إعادة التحميل حتى يمكن رؤية الرسالة
+				}
+
 
 		</script>
 	</body>
