--- a/master peace ajloun/services.html
+++ b/master peace ajloun/services.html
@@ -32,6 +32,8 @@
     <!-- Template Stylesheet -->
     <script src="js/Services.js"></script>
     <link href="css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+
 </head>
 
 <body>
@@ -256,13 +258,8 @@
                                     </div>
                                 </div>
                                 <p class="footer_about_text">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit.
-                                    Vivamus quis vu lputate eros, iaculis
-                                    consequat nisl. Nunc
-                                    et suscipit urna. Integer eleme ntum
-                                    orci eu vehicula
-                                    pretium.
+                                    Discover the beauty of Ajloun, Jordan. From historic sites to scenic landscapes, explore what makes Ajloun a unique
+                                    destination. Contact us for more information or plan your visit today!
                                 </p>
                                 <ul class="footer_social_list">
                                     <li class="footer_social_item">
@@ -351,30 +348,30 @@
                             <div class="footer_content footer_tags">
                                 <ul class="tags_list clearfix">
                                     <li class="tag_item">
-                                        <a href="telefrik.html">Telefrik</a>
+                                        <a href="">Telefrik</a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="castle.html">Castle</a>
+                                        <a href="">Castle</a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="cabins.html">cabins</a>
+                                        <a href="">cabins</a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="forest_reserve.html">
+                                        <a href="">
                                             Forest Reserve </a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="zipline.html"> Hiking
+                                        <a href=""> Hiking
                                             Zipline </a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="rajeb_waterfalls.html">Rajib</a>
+                                        <a href="">Rajib</a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="natural_trails.html">trails</a>
+                                        <a href="">trails</a>
                                     </li>
                                     <li class="tag_item">
-                                        <a href="mar_elias.html"> Mar Elias
+                                        <a href=""> Mar Elias
                                         </a>
                                     </li>
                                 </ul>
@@ -476,7 +473,8 @@
             </div>
         </div>
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -501,7 +499,7 @@
     <script src="js/about_custom.js"></script>
     <script>
         
-            // Check if JWT is in local storage
+           // Check if JWT is in local storage
             document.addEventListener("DOMContentLoaded", function () {
                 // Check if the element with ID 'userBox' exists
                 const userBox = document.getElementById('userBox');
@@ -513,14 +511,12 @@
                     if (token) {
                         // If user is logged in (JWT token found), show profile link
                         userBox.innerHTML = `
-            <a href="edit_profile.html" id ="profile_icon">Profile</a>         <small style="color: whitesmoke;">|</small>
-
-
-
-            <div class="user_box_link">
-            <a href="#" id="logoutButton">Logout</a>
-            </div>
-            `;
+                            <a href="edit_profile.html" id ="profile_icon">Profile</a>         
+                            <small style="color: whitesmoke;">|</small>
+                            <div class="user_box_link">
+                                <a href="#" id="logoutButton">Logout</a>
+                            </div>
+                        `;
 
                         // Attach logout functionality to the "Logout" button
                         document.getElementById('logoutButton').addEventListener('click', function (event) {
@@ -530,13 +526,13 @@
                     } else {
                         // If user is not logged in, show login/register links
                         userBox.innerHTML = `
-                <div class="user_box_login user_box_link">
-                    <a href="login.html">Login</a>
-                </div>
-                <div class="user_box_register user_box_link">
-                    <a href="login.html">Register</a>
-                </div>
-            `;
+                            <div class="user_box_login user_box_link">
+                                <a href="login.html">Login</a>
+                            </div>
+                            <div class="user_box_register user_box_link">
+                                <a href="login.html">Register</a>
+                            </div>
+                        `;
                     }
                 } else {
                     console.error("Element with ID 'userBox' not found.");
@@ -546,8 +542,14 @@
             // Function to handle logout, moved outside of the event listener
             function logout() {
                 localStorage.removeItem('jwt'); // Remove JWT from local storage
-                alert("Logged out successfully!");
-                window.location.reload(); // Reload the page to refresh the navbar
+
+                // استخدام AlertifyJS لإظهار رسالة نجاح عند تسجيل الخروج
+                alertify.success("Logged out successfully!");
+
+                // إعادة تحميل الصفحة لتحديث الشريط العلوي
+                setTimeout(() => {
+                    window.location.reload();
+                }, 1000); // تأخير قليل قبل إعادة التحميل حتى يمكن رؤية الرسالة
             }
 
     </script>
