--- a/master peace ajloun/adminDashboard/index.html
+++ b/master peace ajloun/adminDashboard/index.html
@@ -201,7 +201,7 @@
                         <div class="bg-secondary text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">Worldwide Sales</h6>
-                                <a href="">Show All</a>
+                                <!-- <a href="">Show All</a> -->
                             </div>
                             <canvas id="worldwide-sales"></canvas>
                         </div>
@@ -210,7 +210,7 @@
                         <div class="bg-secondary text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">Sales & Revenue</h6>
-                                <a href="">Show All</a>
+                                <!-- <a href="">Show All</a> -->
                             </div>
                             <canvas id="salse-revenue"></canvas>
                         </div>
@@ -227,18 +227,18 @@
                 <div class="bg-secondary text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
                         <h6 class="mb-0">Recent Bookings</h6>
-                        <a href="">Show All</a>
+                        <!-- <a href="">Show All</a> -->
                     </div>
                     <div class="table-responsive">
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
                             <thead>
                                 <tr class="text-white">
                                     <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                                    <th scope="col">Booking ID</th>
+                                    <!-- <th scope="col">Booking ID</th> -->
+                                    <th scope="col">Service</th>
                                     <th scope="col">Date</th>
                                     <th scope="col">Customer</th>
-                                    <th scope="col">Service</th>
-                                    <th scope="col">People</th>
+                                    <th scope="col">Guests</th>
                                     <th scope="col">Amount</th>
                                     <th scope="col">Status</th>
                                     <th scope="col">Action</th>
@@ -261,7 +261,7 @@
                         <div class="h-100 bg-secondary rounded p-4" id="messages-container">
                             <div class="d-flex align-items-center justify-content-between mb-2">
                                 <h6 class="mb-0">Messages</h6>
-                                <a href="">Show All</a>
+                                <!-- <a href="">Show All</a> -->
                             </div>
                         </div>
                     </div>
@@ -269,7 +269,7 @@
                         <div class="h-100 bg-secondary rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">Calender</h6>
-                                <a href="">Show All</a>
+                                <!-- <a href="">Show All</a> -->
                             </div>
                             <div id="calender"></div>
                         </div>
@@ -278,7 +278,7 @@
                         <div class="h-100 bg-secondary rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">To Do List</h6>
-                                <a href="">Show All</a>
+                                <!-- <a href="">Show All</a> -->
                             </div>
                             <div class="d-flex mb-2">
                                 <input class="form-control bg-dark border-0" type="text" placeholder="Enter task">
