--- a/master peace ajloun/contact.html
+++ b/master peace ajloun/contact.html
@@ -256,8 +256,8 @@
                     </div>
                   </div>
                   <div class="contact_info_text">
-                    4127 Raoul Wallenber 45b-c Gibraltar
-                  </div>
+                      Ajloun, Jordan, 268 Main Street               
+                   </div>
                 </li>
                 <li class="contact_info_item d-flex flex-row">
                   <div>
@@ -265,7 +265,7 @@
                       <img src="images/phone-call.svg" alt="" />
                     </div>
                   </div>
-                  <div class="contact_info_text">2556-808-8613</div>
+                  <div class="contact_info_text">0782347393</div>
                 </li>
                 <li class="contact_info_item d-flex flex-row">
                   <div>
@@ -284,7 +284,7 @@
                     </div>
                   </div>
                   <div class="contact_info_text">
-                    <a href="https://colorlib.com">www.colorlib.com</a>
+                    <a href="">www.AjlounTour.com</a>
                   </div>
                 </li>
               </ul>
@@ -441,7 +441,8 @@
                       </div>
                     </div>
                     <div class="contact_info_text">
-                      4127 Raoul Wallenber 45b-c Gibraltar
+                      Ajloun, Jordan, 268 Main Street
+
                     </div>
                   </li>
                   <li class="contact_info_item d-flex f lex-row">
@@ -450,7 +451,7 @@
                         <img src="images/phone-call.svg" alt="" />
                       </div>
                     </div>
-                    <div class="contact_info_text">2556-808-8613</div>
+                    <div class="contact_info_text">0782347393</div>
                   </li>
                   <li class="contact_info_item d-flex flex-row">
                     <div>
@@ -469,7 +470,7 @@
                       </div>
                     </div>
                     <div class="contact_info_text">
-                      <a href="https://colorlib.com">www.info.com</a>
+                      <a href="">www.info.com</a>
                     </div>
                   </li>
                 </ul>
@@ -508,9 +509,9 @@
                   <li class="footer_nav_item">
                     <a href="about.html">about us</a>
                   </li>
-                  <li class="footer_nav_item">
+                  <!-- <li class="footer_nav_item">
                     <a href="offers.html">offers</a>
-                  </li>
+                  </li> -->
                   <li class="footer_nav_item">
                     <!-- <a href="blog.html">news</a> -->
                   </li>
