--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -908,24 +908,24 @@
 
 
 
-
+<!-- 
     <button class="live-chat-toggle">
       <i class="fas fa-comments"></i>
     </button>
-    <!-- Add a div to contain the live chat -->
+    
     <div class="live-chat-container">
       <div class="live-chat-header">
         <h4>Live Chat</h4>
         <button class="close-chat-btn">X</button>
       </div>
       <div class="live-chat-messages">
-        <!-- Messages will be displayed here -->
+        
       </div>
       <div class="live-chat-input">
         <input type="text" id="chat-input" placeholder="Type a message...">
         <button id="send-btn">Send</button>
       </div>
-    </div>
+    </div> -->
 
 
 
