--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -602,11 +602,10 @@
       </div>
     </div>
 
-    <!-- Modal Structure -->
     <div id="serviceModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <div id="serviceResults"></div> <!-- Where the services will be displayed -->
+        <div id="serviceResults"></div> 
       </div>
     </div>
 
